콤보박스 만드는중 arrayadapter

--- a/app/src/main/res/layout/activity_add_gift.xml
+++ b/app/src/main/res/layout/activity_add_gift.xml
@@ -63,6 +63,11 @@
             android:layout_height="wrap_content"
             android:text="@string/importance_middle" />
 
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <RadioButton
             android:id="@+id/btn_high"
             android:layout_width="wrap_content"
@@ -95,6 +100,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
 
+
     <TextView
         android:id="@+id/tv_url"
         android:layout_width="wrap_content"
@@ -102,23 +108,42 @@
         android:text="imageURL"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.056"
-        app:layout_constraintStart_toStartOf="@+id/btn_galary"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.776" />
+        app:layout_constraintHorizontal_bias="0.316"
+        app:layout_constraintStart_toEndOf="@+id/btn_galary"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/edt_info"
+        android:layout_width="0dp"
+        android:layout_height="129dp"
+        android:ems="10"
+        android:inputType="textMultiLine|textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/btn_completion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/iv_addgift"
+        app:layout_constraintTop_toBottomOf="@+id/tv_url"
+        app:layout_constraintVertical_bias="0.088" />
 
     <ImageView
         android:id="@+id/iv_addgift"
-        android:layout_width="230dp"
-        android:layout_height="203dp"
+        android:layout_width="140dp"
+        android:layout_height="135dp"
         android:layout_gravity="center_vertical"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.889"
+        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.778"
+        app:layout_constraintVertical_bias="0.644"
         tools:visibility="visible" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="527dp"
+        android:spinnerMode="dialog"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
