brand 명칭 자동매칭 반영

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -5,6 +5,7 @@
         <item>STARBUCKS</item>
         <item>이디야</item>
         <item>EDIYA</item>
+        <item>백다방</item>
         <item>기타</item>
     </string-array>
 
