--- a/app/src/main/res/layout/activity_add_gift.xml
+++ b/app/src/main/res/layout/activity_add_gift.xml
@@ -129,14 +129,15 @@
 
     <Spinner
         android:id="@+id/spinner_brand"
-        android:layout_width="295dp"
-        android:layout_height="27dp"
+        android:layout_width="297dp"
+        android:layout_height="44dp"
+        android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.611"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView"
@@ -149,7 +150,7 @@
         app:layout_constraintHorizontal_bias="0.057"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.564" />
+        app:layout_constraintVertical_bias="0.585" />
 
     <TextView
         android:id="@+id/textView2"
@@ -159,10 +160,10 @@
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintHorizontal_bias="0.058"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.104" />
+        app:layout_constraintVertical_bias="0.191" />
 
     <Button
         android:id="@+id/button"
@@ -175,13 +176,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.984" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="사용여부"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="495dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
