20220602 intro, icon 변경완료

--- a/app/src/main/res/layout/intro_layout.xml
+++ b/app/src/main/res/layout/intro_layout.xml
@@ -8,9 +8,13 @@
     tools:context=".IntroActivity">
 
     <ImageView
-        android:src="@drawable/intro_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/iv_intro_cat"
+        android:layout_width="279dp"
+        android:layout_height="538dp"
         android:scaleType="fitXY"
-        />
+        android:src="@raw/intro_cat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
