--- a/app/src/main/res/layout/item_gift.xml
+++ b/app/src/main/res/layout/item_gift.xml
@@ -8,65 +8,83 @@
 
 
     <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="336dp"
-        android:layout_height="70dp"
+        android:id="@+id/tv_info"
+        android:layout_width="321dp"
+        android:layout_height="66dp"
         android:text="GO TO GYM"
         android:textAlignment="viewStart"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.944"
         app:layout_constraintStart_toEndOf="@+id/iv_gift_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/iv_gift_image"
-        android:layout_width="74dp"
-        android:layout_height="70dp"
+        android:layout_width="78dp"
+        android:layout_height="98dp"
         android:layout_gravity="center_vertical"
+        android:textColor="@color/black"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.006"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/tv_validate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="16dp"
+        android:gravity="center"
         android:text="유효기간"
         android:textAlignment="center"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/iv_gift_image"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.263"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.545" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/tv_useyn"
+        android:layout_width="91dp"
+        android:layout_height="16dp"
+        android:text="사용여부"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_brand"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.243"
+        app:layout_constraintStart_toEndOf="@+id/tv_brand"
+        app:layout_constraintTop_toTopOf="@+id/tv_brand"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tv_brand"
-        android:layout_width="86dp"
+        android:layout_width="113dp"
         android:layout_height="16dp"
         android:gravity="center"
         android:text="BRAND"
         android:textAlignment="center"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/tv_validate"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintHorizontal_bias="0.072"
         app:layout_constraintStart_toEndOf="@+id/tv_validate"
         app:layout_constraintTop_toTopOf="@+id/tv_validate"
         app:layout_constraintVertical_bias="0.0" />
 
     <View
-        android:id="@+id/divider"
+        android:id="@+id/divider1"
         android:layout_width="409dp"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
+        android:divider="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,24 +94,15 @@
     <View
         android:id="@+id/divider2"
         android:layout_width="406dp"
-        android:layout_height="4dp"
+        android:layout_height="2dp"
         android:background="?android:attr/listDivider"
+        android:divider="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/tv_useyn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="사용여부"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_brand"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_brand"
-        app:layout_constraintTop_toTopOf="@+id/tv_brand"
-        app:layout_constraintVertical_bias="0.074" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
